--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 :root{
---background-color: rgb(20, 20, 20);
+--background-color: rgb(25, 25, 25);
 --main-txt-color: white;
 --accent-txt-color: rgb(255, 145, 0);
 --accent-2-txt-color: rgb(121, 189, 245);
@@ -12,9 +12,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
-    background-color: var(--background-color);
     color: rgb(230, 230, 230);
+    background-image: url("/img/task_bg.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .accent{
     color: var(--accent-txt-color);
@@ -22,45 +25,126 @@ body{
 .accent-2{
     color: var(--accent-2-txt-color);
 }
-.page-container{
-    display: flex;
-    background-color: var(--background-color);
-    min-height: calc(100vh - 135px);
-}
+
 header{
-    width: 100%;
+    margin: 0;
+    width: calc(100% - 20px);
     overflow: hidden;
-    border-radius: auto;
-    margin-top: 10px;
+    border-radius: 0 0 20px 20px;
+    padding: 0;
+    background-color: transparent;
+    position: sticky;
+    top: 0;
+    padding-bottom: 10px;
+    z-index: 100;
+    margin-inline: 10px;
 }
 h1{
     text-align: center;
-    max-width: calc(100vw - 20px);
-    margin-left: auto;
-    margin-right: auto;
+    min-width: calc(100% - 20px);
     margin-bottom: 0;
     padding-block: 30px;
-    background-color: rgba(100, 100, 100, .6);
-    border: 3px solid rgba(25, 25, 25, .5);
-    border-radius: 10px;
+    background-color: rgb(50, 50, 50);
+    border: 3px solid rgb(25, 25, 25);
+    border-bottom: none;
+    border-top: none;
 }
+.toggleFormButton{
+    min-width: 100%;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+    padding: 5px;
+    background-color: var(--accent-txt-color);
+    color: rgb(50, 50, 50);
+    border: 3px solid rgba(25, 25, 25);
+    border-top: none;
+}
+
+.toggleFormButton:hover{
+    background-color: var(--accent-2-txt-color);
+}
+
+.page-container{
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+}
+
 .task-list{
     position: relative;
     flex: 5;
+    width: calc(100% - 40px);
+    background-color: transparent;
+    margin-right: 20px;
+}
+.task-card{
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(50, 50, 50, .9);
+    color: rgb(50, 50, 50);
+    text-align: left;
     width: 100%;
-    background-color: var(--background-color);
-    align-items: right;
+    /* min-width: calc(100% - 20px); */
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 3px;
+    /* border: 2px solid var(--accent-txt-color); */
+    border-radius: 10px;
+    overflow: hidden;
+}
+.task-title{
+    width: fit-content;
+    height: 40px;
+    background-color: rgb(75, 75, 75);
+    border: 1px solid black;
+    border-radius: 10px;
+    color: white;
+    margin: 3px;
+    padding-inline: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.task-short-info{
+    display: flex;
+    justify-content: space-between;
+}
+.task-short-info > *{
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 3px;
+    background-color: rgb(75, 75, 75);
+    color: var(--accent-2-txt-color);
+    width: 100%;
+    padding: 10px;
+}
+.task-long-info{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-top: 0;
+    border-radius: 10px;
+}
+.task-long-info > *{
+    border: 1px solid black;
+    width: 100%;
+    background-color: rgb(75, 75, 75);
+    border-radius: 10px;
+    margin: 3px;
+    color: var(--accent-2-txt-color);
+    padding: 10px;
 }
 .form{
     flex: 3;
-    background-color: rgba(100, 100, 100, .6);
-    margin-top: 10px;
+    background-color: rgba(75, 75, 75, .9);
     margin-right: 10px;
     border-radius: 10px;
-    border: 3px solid rgba(25, 25, 25, .5);
+    border: 3px solid rgb(25, 25, 25);
+    width: 100%;
+    position: sticky;
+    top: 151px;
 }
 .task-form{
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,11 +157,11 @@ h1{
 .inputs > *{
     margin-block: 10px;
     width: 100%;
-    min-height: 40px;
+    min-height: 30px;
     border: none;
     border-radius: 10px;
     text-align: center;
-    padding-inline: 5px;
+    padding: 5px;
     background-color: rgb(200, 200, 200);
 }
 .inputs > *:hover{
@@ -96,21 +180,7 @@ h1{
     color: gray;
     cursor: pointer;
 }
-.toggleFormButton{
-    width: 200px;
-    margin-left: 10px;
-    margin-top: 10px;
-    text-align: center;
-    border-radius: 10px;
-    padding: 5px;
-    background-color: var(--accent-2-txt-color);
-    color: rgb(50, 50, 50);
-    /* border: 3px solid rgba(25, 25, 25, .5); */
-    outline: 1px solid var(--accent-2-txt-color);
-}
-.toggleFormButton:hover{
-    background-color: var(--accent-txt-color);
-}
+
 .save-button{
     width: 100px;
     height: 40px;
@@ -124,4 +194,10 @@ h1{
 .save-button:focus{
     background-color: var(--accent-2-txt-color);
     color: rgb(20, 20, 20);
+}
+
+.form-closed{
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
