--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ body{
 
 header{
     margin: 0;
-    width: calc(100% - 20px);
+    width: calc(80% - 20px);
     overflow: hidden;
     border-radius: 0 0 20px 20px;
     padding: 0;
@@ -37,7 +37,7 @@ header{
     top: 0;
     padding-bottom: 10px;
     z-index: 100;
-    margin-inline: 10px;
+    margin-inline: auto;
 }
 h1{
     text-align: center;
@@ -66,8 +66,10 @@ h1{
 
 .page-container{
     display: flex;
-    width: 100%;
+    width: 80%;
     align-items: flex-start;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .task-list{
@@ -93,7 +95,25 @@ h1{
     border-radius: 10px;
     overflow: hidden;
 }
+.card-info-container{
+    display: flex;
+    flex-direction: row;
+}
+.card-left,
+.task-long-info,
+.task-short-info{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    width: 100%;
+    align-items: flex-start;
+}
+
+.card-right{
+    flex: 1;
+}
 .task-title{
+    display: flex;
     width: fit-content;
     height: 40px;
     background-color: rgb(75, 75, 75);
@@ -105,32 +125,33 @@ h1{
     padding-top: 5px;
     padding-bottom: 5px;
 }
+.task-title h4{
+    margin-left: 10px;
+}
 .task-short-info{
     display: flex;
-    justify-content: space-between;
 }
 .task-short-info > *{
     border: 1px solid black;
     border-radius: 10px;
-    margin: 3px;
+    margin: 5px;
     background-color: rgb(75, 75, 75);
     color: var(--accent-2-txt-color);
-    width: 100%;
+    width: calc(100% - 10px);
     padding: 10px;
 }
 .task-long-info{
     display: flex;
     width: 100%;
-    justify-content: space-between;
     padding-top: 0;
     border-radius: 10px;
 }
 .task-long-info > *{
     border: 1px solid black;
-    width: 100%;
+    width: calc(100% - 10px);
     background-color: rgb(75, 75, 75);
     border-radius: 10px;
-    margin: 3px;
+    margin: 5px;
     color: var(--accent-2-txt-color);
     padding: 10px;
 }
